service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx       # Importante: tem que ser igual ao 'label' do Deployment!
  ports:
    - protocol: TCP
      port: 80         # Porta que o Service ouve
      targetPort: 80   # Porta que o Pod ouve
      nodePort: 30001  # Porta que vai abrir no seu "servidor" (WSL)
  type: NodePort
