tmp-dev-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-server-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 5500
      targetPort: 5500
  selector:
    app: dev-server
