tmp-mobile-dev-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobile-dev-server-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 5598
      targetPort: 8080
  selector:
    app: mobile-dev-server
