tmp-mobile-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobile-server-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 5599
      targetPort: 8080
  selector:
    app: mobile-server
