tmp-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 31701
  selector:
    app: nginx
